# turtle_run

./: README.md
Turtles/: .clang-format  .gitignore  Turtles.uproject
Turtles/Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Turtles/Content/: BP_TRTGameModeBase.uasset  BP_TRTPlayerStart.uasset
Turtles/Content/AI/: BP_TRTAICharacter.uasset  BP_TRTAIController2.uasset  BP_TRTAIController3.uasset  BP_TRTTurtle2.uasset  BP_TRTTurtle3.uasset
Turtles/Content/AI/Turtle1/: BP_TRTAITurtle1Controller.uasset
Turtles/Content/AI/Turtle2/: BP_TRTAITurtle2Controller.uasset
Turtles/Content/AI/Turtle3/: BP_TRTAITurtle3Controller.uasset
Turtles/Content/Buttons/: BP_TRTButton.uasset
Turtles/Content/Enviroment/: BasicFloor.uasset
Turtles/Content/Levels/: TestMap.umap  TestMap_BuiltData.uasset
Turtles/Content/Materials/: MI_BlackColor.uasset  MI_ButtonActiveGlow.uasset  MI_RedColor.uasset  M_BaseColor.uasset  M_BaseGlow.uasset
Turtles/Content/Player/: BP_TRTCameraPawn.uasset
Turtles/Content/Sound/Button/: SCue_ButtonPressed.uasset
Turtles/Content/Sound/Character/: SCue_Die.uasset  SCue_FootstepsWalk.uasset  SCue_Spawn.uasset
Turtles/Content/Sound/Settings/: SC_Button.uasset  SC_Character.uasset  SC_Master.uasset
Turtles/Content/UI/: BPW_HUD.uasset  BP_TRTGameHUD.uasset
Turtles/Content/VFX/: NS_SimpleExplosion.uasset  NS_SimpleFountain.uasset
Turtles/Source/Turtles/: Turtles.Build.cs
string_converter/: .editorconfig  CMakeLists.txt
string_converter/source/: main.cpp  string_converter.cpp  string_converter.hpp
(+53 files in other folders)
